fix: refine hamburger menu toggle functionality and update styles for better visibility

--- a/Resources/Css/style.css
+++ b/Resources/Css/style.css
@@ -73,6 +73,7 @@ body {
     justify-content: space-between;
     z-index: 1001;
     position: fixed;
+    color: hsl(0, 0%, 18%);
 }
 
 .hamburger div {
@@ -83,7 +84,8 @@ body {
 }
 
 .hamburger.active .bar1 {
-    transform: rotate(-45deg) translate(-5px, 14px);
+    transform: rotate(45deg) translate(4px, 10px);
+    width: 38px;
 }
 
 .hamburger.active .bar2 {
@@ -91,7 +93,8 @@ body {
 }
 
 .hamburger.active .bar3 {
-    transform: rotate(45deg) translate(-2px, -13px);
+    transform: rotate(-45deg) translate(5px, -16px);
+    width: 38px;
 }
 
 @media screen and (max-height: 450px) {
